# netbox-docker-dev

./: Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  launch-netbox-dev.sh
configuration/: configuration.py  plugins.py
env/: netbox.env
plugins/my-test-plugin/: README.md  pyproject.toml
plugins/my-test-plugin/my_test_plugin/: __init__.py  navigation.py  urls.py
